--- a/styles.css
+++ b/styles.css
@@ -316,3 +316,173 @@ hr {
 .vyn{
     margin-top: 150px;
 }
+
+.firstbox{
+    margin-top:400px;
+    margin-left: 350px;
+    margin-right: 350px;
+}
+.text-before-collection{
+    margin-top:200px;
+}
+.submit-forma{
+    width: 800px;
+    height: 900px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-left: 210px;
+    margin-top: 50px;
+    border-radius: 20px;
+    border: 2px solid white;
+    background-color: #111111;
+    cursor: pointer;
+    transition: 0.3s ;
+}
+.dragndrop{
+    width: 800px;
+    height:500px;
+    background-color: #111111;
+    margin-left: 550px;
+    margin-top: 60px;
+}
+.drag-container{
+    width: 100%;
+    min-height: 52vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#left, #right{
+    width: 300px;
+    min-height: 400px;
+    margin: 20px;
+    border: 2px dashed #fff;
+}
+.list{
+    background-color: #e91e63;
+    height:60px;
+    margin:30px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    cursor: grab;
+    border: 1px solid white;
+    transition: 0.5s;
+}
+.list:hover{
+    background-color: #c50948;
+
+}
+.list img{
+    width: 10px;
+    margin-right: 15px;
+    margin-left: 20px;
+}
+.submit-forma:hover{
+    width: 810px;
+    height: 910px;
+
+}
+.todo-con {
+    text-align: center;
+    background-color: #fff;
+    padding: 40px;
+    border-radius: 15px;
+    width: 500px;
+
+}
+::placeholder {
+    justify-content: center;
+    text-align: left;
+}
+#taskList {
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.task {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    background-color: #e0e0e0;
+    border-radius: 4px;
+    margin-bottom: 5px;
+}
+
+.task input {
+    margin-right: 10px;
+}
+
+#todobut {
+    background-color: black;
+    color: white;
+    width: 90px;
+    height: 40px;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: 0.2s;
+    border: none;
+    font-size: 13px;
+    margin-left: 20px;
+    
+}
+#todobut:hover{
+    background-color: rgba(255, 255, 255, 0);
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(0, 0, 0);
+    color:rgb(0, 0, 0);
+}
+.task button {
+    background-color: #ff008093;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    border-radius: 2px;
+    cursor: pointer;
+    transition: 0.17s;
+}
+
+.task button:hover {
+    background-color: #ff0080d3;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: mRegular;
+}
+body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+.cont {
+  position: relative;
+  max-width: 700px;
+  width: 100%;
+  background: #fff;
+  padding: 25px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+.cont header {
+  font-size: 1.5rem;
+  color: #333;
+  font-weight: 500;
+  text-align: center;
+}
+.cont .form {
+  margin-top: 30px;
+}
+.form .input-box {
+  width: 100%;
+  margin-top: 20px;
+}
+.input-box label {
+  color: #333;
+}
