--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -47,3 +47,13 @@ body{
     background: rgba(0,0,0,0.5);
     z-index: 1;
 }
+
+@media only screen and (min-width:768px) and (max-width:991px) {
+    .carousel-caption{
+        bottom: 370px;
+    }
+    .carousel-caption p{
+        width: 100%;
+    }
+    
+}
