--- a/casestyle.css
+++ b/casestyle.css
@@ -42,6 +42,19 @@
     --orange: #FFA500;
 
 }
+
+@keyframes slowdown {
+  0% { transform: translateX(0); opacity: 0; }
+  50% { transform: translateX(60px); opacity: 0.4; }
+  100% { transform: translateX(30px); opacity: 0.8; }
+  100% { transform: translateX(0px); opacity: 1; }
+}
+
+.maintext {
+  animation: slowdown 3s ease-in-out; /* Adjust the duration as needed */
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55); /* Custom easing for a smooth slowdown */
+}
+
 section{
     padding: 4.5rem 0 1.5rem;
 }
