--- a/styleabout.css
+++ b/styleabout.css
@@ -25,8 +25,17 @@
 }
 
 
+@keyframes slowdown {
+  0% { transform: translateX(0); opacity: 0; }
+  50% { transform: translateX(60px); opacity: 0.4; }
+  100% { transform: translateX(30px); opacity: 0.8; }
+  100% { transform: translateX(0px); opacity: 1; }
+}
 
-
+.maintext {
+  animation: slowdown 3s ease-in-out; 
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55); 
+}
 
 
 
